Profile Not Visible Fixed
Changed the className to ProfilePageOfUser

--- a/client/src/Css/profile/MainBody.css
+++ b/client/src/Css/profile/MainBody.css
@@ -1,5 +1,5 @@
 /* The main content area */
-.profile{
+.profilePage {
   width: inherit;
   padding-top: 5.54vh;
   position: relative;
